<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/autonomyText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/autonomiaText"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="45dp"
            android:text="@string/km_litro"

            />

        <EditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/precoText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="@string/preco_por_litro" />

        <EditText
            android:id="@+id/distanceText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/distanciaText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:text="@string/total_de_quilometros"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10sp"
            android:text="Seu gasto total sera de = "
            android:textAllCaps="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/priceScreen"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="R$ 0,00"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="#fd6a6a"
            android:textSize="35sp"/>

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapes"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/calcular" />

    </LinearLayout>
</ScrollView>
